style: fix header overlap on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,9 @@
   .branch-header-subtitle {
     display: none;
   }
+  .md-header-nav__topic {
+    display: none;
+  }
 }
 
 
